welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	var x=false
	if ((Math.abs(100-n)<10) || (Math.abs(200-n)<10))
	return x
}
